# django

./: README.md  db.sqlite3  pyproject.toml
boards/: admin.py  models.py
boards/migrations/: 0001_initial.py  0002_board_date_board_likes_board_reviews_board_writer.py  0003_board_created_at_board_updated_at.py  0004_board_user.py
challenge/: DataAnalysis.ipynb  machin_learning.ipynb
common/: models.py
config/: authentication.py  settings.py  urls.py
feeds/: admin.py  models.py  serializers.py  tests.py  views.py
feeds/migrations/: 0001_initial.py
reviews/: models.py  serializers.py  tests.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
users/: admin.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_is_business.py  0003_user_grade.py
