[tool.poetry]
name = "django_backend"
version = "0.1.0"
description = "python django project"
authors = ["hjhj <hjhjgudwls@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyjwt = "^2.8.0"

django = "^3.2.12"
djangorestframework-simplejwt = "^5.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
